Habilitar y permisos roles

--- a/src/app/directiva/directiva.component.html
+++ b/src/app/directiva/directiva.component.html
@@ -1,9 +1,13 @@
-<button type="button" (click)="setHabilitar()" class="btn btn-primary my-3">{{ habilitar == true? 'Ocultar': 'Mostrar'}}</button>
-<div class="card">
-    <div class="card-header">
-        Listado de comidas
-    </div>
-    <ul class="list-group" *ngIf="habilitar == true">
-        <li class="list-group-item" *ngFor="let item of listaComida"> {{item}} </li>
-    </ul>
+<div class="container my-3 text-justify">
+    <h2 class="text-primary">Políticas de uso de la plataforma</h2>
+    <br>
+    <h5>Ley 1266 de 2008, ley 1480 de 2011 y ley 1581 de 2012</h5>
+    <p>Es importante manejar los datos de los pacientes, bajo un correcto uso y mantener una privacidad de ellos por ejemplo, no compartirlos con personal que no pertenezca al consultorio odontológico de Nuevas Sonrisas S.A.S. entre otras faltas que establece
+        las leyes antes nombradas.</p>
+    <br>
+    <br>
+    <br>
+    <p>Atentamente,</p>
+    <br>
+    <p>Consultorio odontológico Nuevas Sonrisas S.A.S.</p>
 </div>
