--- a/src/app/empleados/empleados.component.html
+++ b/src/app/empleados/empleados.component.html
@@ -1,5 +1,5 @@
 <detalle-empleado *ngIf="empleadoSeleccionado" [empleado]="empleadoSeleccionado"></detalle-empleado>
-
+<app-modal-habilitar *ngIf="empleadoSeleccionado" [empleado]="empleadoSeleccionado"></app-modal-habilitar>
 <div class="container card border-secondary mb-3 mt-3">
     <div class="card-header ">Empleados</div>
     <div class="card-body text-secondary table-responsive">
@@ -14,22 +14,22 @@
         </div>
         <table class="table table-bordered table-striped" *ngIf="empleados?.length>0">
 
-            <thead class="thead-dark">
+            <thead class="thead-dark text-center">
                 <tr>
-                    <th *ngIf="authService.hasRole('ROLE_USER')"># Perfil</th>
+                    <th *ngIf="authService.hasRole('ROLE_ADMIN')"># Perfil</th>
                     <th>Nombre</th>
                     <th>Apellido</th>
                     <th>No. Identificación</th>
                     <th>Celular</th>
-                    <th>Fecha de Contr.</th>
+                    <th>Habilitar</th>
                     <th *ngIf="authService.hasRole('ROLE_ADMIN')">Editar</th>
                     <th *ngIf="authService.hasRole('ROLE_ADMIN')">Eliminar</th>
                 </tr>
             </thead>
 
-            <tbody>
+            <tbody class="text-justify">
                 <tr *ngFor="let empleado of empleados">
-                    <td *ngIf="authService.hasRole('ROLE_USER')">
+                    <td *ngIf="authService.hasRole('ROLE_ADMIN')">
                         <!-- si existe la foto o sea diferente a nulo -->
                         <img (click)="abrirModal(empleado)" *ngIf="empleado?.foto" src="http://localhost:8080/api/uploads/img/{{empleado.foto}}" alt="{{empleado.foto}}" class="img-thumbnail rounded" style="width: 64px; cursor:pointer">
                         <img (click)="abrirModal(empleado)" *ngIf="!empleado?.foto" src="http://localhost:8080/images/no-usuario.png" alt="Sin foto" class="img-thumbnail rounded" style="width: 64px; cursor:pointer">
@@ -38,12 +38,15 @@
                     <td> {{empleado.apellido}} </td>
                     <td> {{empleado.numeroIdentificacion}} </td>
                     <td> {{empleado.celular}} </td>
-                    <!-- El caracter | es el pipe en angular -->
-                    <td> {{empleado.fechaContrato | date:"dd MMMM, yyyy"}} </td>
-                    <td *ngIf="authService.hasRole('ROLE_ADMIN')">
+                    <!-- El caracter | es el pipe en angular {{empleado.fechaContrato | date:"dd MMMM, yyyy"}} -->
+                    <td class="text-center">
+                        <button type="button" class="btn btn-dark" *ngIf="empleado.habilitado" (click)="abrirModalHab(empleado)">Deshabilitar</button>
+                        <button type="button" class="btn btn-success" *ngIf="!empleado.habilitado" (click)="abrirModalHab(empleado)">Habilitar</button>
+                    </td>
+                    <td *ngIf="authService.hasRole('ROLE_ADMIN')" class="text-center">
                         <button type="button" name="editar" [routerLink]="['/empleados/form', empleado.idEmpleado]" class="btn btn-outline-info btn-sm">Editar</button>
                     </td>
-                    <td *ngIf="authService.hasRole('ROLE_ADMIN')">
+                    <td *ngIf="authService.hasRole('ROLE_ADMIN')" class="text-center">
                         <button type="button" name="eliminar" (click)='delete(empleado)' class="btn btn-danger btn-sm">Eliminar</button>
                     </td>
                 </tr>
