--- a/src/app/empleados/empleado-rol/empleado-rol.component.html
+++ b/src/app/empleados/empleado-rol/empleado-rol.component.html
@@ -1,6 +1,6 @@
 <div class="container card border-secondary mb-3 mt-3">
     <div class="card-header">Perfiles</div>
-    <div class="card-body text-dark table-responsive">
+    <div class="card-body table-responsive">
         <h5 class="card-title">Listado de perfiles asignados</h5>
 
         <div class="my-2 text-left">
@@ -12,7 +12,7 @@
         </div>
 
         <table class="table table-bordered table-striped table-hover">
-            <thead class="thead-dark">
+            <thead class="bg-primary text-white">
                 <tr>
                     <th scope="col">Empleado</th>
                     <th scope="col">Perfil</th>
