--- a/src/app/empleados/empleados.component.html
+++ b/src/app/empleados/empleados.component.html
@@ -2,7 +2,7 @@
 <app-modal-habilitar *ngIf="empleadoSeleccionado" [empleado]="empleadoSeleccionado"></app-modal-habilitar>
 <div class="container card border-secondary mb-3 mt-3">
     <div class="card-header ">Empleados</div>
-    <div class="card-body text-secondary table-responsive">
+    <div class="card-body table-responsive">
         <h5 class="card-title ">Listado de empleados</h5>
 
         <div class="my-2 text-left">
@@ -14,7 +14,7 @@
         </div>
         <table class="table table-bordered table-striped" *ngIf="empleados?.length>0">
 
-            <thead class="thead-dark text-center">
+            <thead class="bg-primary text-white text-center">
                 <tr>
                     <th *ngIf="authService.hasRole('ROLE_ADMIN')"># Perfil</th>
                     <th>Nombre</th>
