--- a/src/app/pacientes/pacientes.component.html
+++ b/src/app/pacientes/pacientes.component.html
@@ -5,7 +5,7 @@
         <div class="my-2 d-flex justify-content-between p-2 form-inline">
             <button type="button" class="btn btn-info" [routerLink]="['/pacientes/paciente-form']">Crear paciente</button>
             <form>
-                <div class="form-group form-inline">
+                <div class="form-group form-inline text-primary">
                     Buscar paciente
                     <fa-icon [icon]="faSearch" class="ml-2 fa-lg"></fa-icon> <input class="form-control ml-2" type="text" placeholder="Buscar..." name="search" [(ngModel)]="term" />
                 </div>
@@ -13,7 +13,7 @@
         </div>
 
         <table class="table table-bordered table-striped table-hover">
-            <thead class="thead-dark">
+            <thead class="bg-primary text-white">
                 <tr>
                     <th>#</th>
                     <th (click)="sort('nombre')" [class.active]="order === 'nombre'" class="mano">
