Antes de crear home-page

--- a/src/app/empleados/form.component.html
+++ b/src/app/empleados/form.component.html
@@ -1,8 +1,8 @@
-<ul class="container alert alert-danger pl-4" *ngIf="errores?.length > 0">
+<ul class="container alert alert-danger pl-4 mt-4" *ngIf="errores?.length > 0">
     <li *ngFor="let itemErr of errores"> {{itemErr}} </li>
 </ul>
 
-<div class="container card bg-white mt-3">
+<div class="container card bg-white my-3">
     <div class="card-header"> {{titulo}} </div>
     <div class="card-body">
 
