--- a/src/app/pacientes/paciente-form.component.html
+++ b/src/app/pacientes/paciente-form.component.html
@@ -1,4 +1,4 @@
-<ul class="container alert alert-danger pl-4" *ngIf="errores?.length > 0">
+<ul class="container alert alert-danger pl-4 mt-3" *ngIf="errores?.length > 0">
     <li *ngFor="let itemErr of errores"> {{itemErr}} </li>
 </ul>
 <div class="container card bg-white mt-3 mb-3">
