Posible correccion en no mostrar home - antes de AOS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
-<app-login *ngIf="!authService.isAuthenticated()"></app-login>
+<app-home></app-home>
+<!-- <app-login *ngIf="!authService.isAuthenticated()"></app-login>
 <app-header *ngIf="authService.isAuthenticated()"></app-header>
 
-<div class="wrap mg-4">
-    <!-- directiva donde se van a renderizar y mostar el contenido de cada ruta -->
-    <router-outlet *ngIf="authService.isAuthenticated()"></router-outlet>
+<div class="wrap mg-4"> -->
+<!-- directiva donde se van a renderizar y mostar el contenido de cada ruta -->
+<!--  <router-outlet *ngIf="authService.isAuthenticated()"></router-outlet>
 </div>
-<app-footer *ngIf="authService.isAuthenticated()"></app-footer>
-
-<!-- 
-*ngIf="!authService.isAuthenticated() *ngIf="authService.isAuthenticated()" *ngIf="authService.isAuthenticated()" *ngIf="authService.isAuthenticated()" -->
+<app-footer *ngIf="authService.isAuthenticated()"></app-footer> -->
