--- a/src/app/empleados/login.component.html
+++ b/src/app/empleados/login.component.html
@@ -20,6 +20,9 @@
                                 <input (click)="login()" class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" value="Ingresar">
                                 <br>
                             </form>
+                            <div class="text-center">
+                                <a class="small" href="/home">Volver a la pagina principal</a>
+                            </div>
                             <!--<div class="container alert alert-danger pl-4" *ngIf="errores?.length > 0">
                             <span>{{errores}}</span>
                         </div>-->
