--- a/src/app/empleados/login.component.html
+++ b/src/app/empleados/login.component.html
@@ -30,7 +30,7 @@
                                 <ngb-alert [dismissible]="false" type="danger" *ngIf="errores" (close)="errores">{{ errores }}</ngb-alert>
                             </p>
                             <hr class="my-4">
-                            <p class="text-center copyr">&copy; jamesjfgv@gmail.com - 2020</p>
+                            <p class="text-center copyr">&copy; jamesjfgv@gmail.com - {{ anio }}</p>
                         </div>
                     </div>
                 </div>
