--- a/src/app/empleados/mi-cuenta.component.html
+++ b/src/app/empleados/mi-cuenta.component.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="my-2">
-                <small class="text-muted ml-2">Para ver los cambios de la foto luego de dar click en subir, cierre e inicie sesión</small>
+                <small class="text-muted ml-2">Para ver los cambios de la foto luego de dar click en subir, cerrar e iniciar sesión</small>
             </div>
         </div>
     </div>
