--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,27 @@
+@-webkit-keyframes animate-preloader {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes animate-preloader {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    [data-aos-delay] {
+        transition-delay: 0 !important;
+    }
+}
+
 a {
     color: #E95420;
 }
@@ -37,7 +61,7 @@ a:hover {
     background: white;
     transition: all 0.5s;
     z-index: 997;
-    padding: 20px 0;
+    /* padding: 10px 0; */
     top: 40px;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
@@ -82,7 +106,8 @@ a:hover {
 
 /* ==== Menu nav ==== */
 
-.nav-menu ul {
+
+/* .nav-menu ul {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -96,7 +121,7 @@ a:hover {
     position: relative;
     white-space: nowrap;
     padding: 10px 0 10px 28px;
-}
+}*/
 
 .nav-menu a {
     display: block;
@@ -115,6 +140,8 @@ a:hover {
     color: #E95420;
 }
 
+
+/*
 .nav-menu .drop-down ul {
     display: block;
     position: absolute;
@@ -192,7 +219,7 @@ a:hover {
     .nav-menu .drop-down .drop-down>a:after {
         content: "\ea9d";
     }
-}
+} */
 
 
 /* ==== fin menu nav ==== */
@@ -204,26 +231,26 @@ a:hover {
 /* ==== carrusel ==== */
 
 .imagen-1 {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../images/entradaC-02.jpeg);
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../assets/img/entradaC-02.jpeg);
     background-size: cover;
     background-position: center;
 }
 
 .imagen-2 {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../images/consultorio-loginC.jpeg);
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../assets/img/consultorio-loginC.jpeg);
     background-size: cover;
     background-position: center;
 }
 
 .imagen-3 {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../images/sala-esperaC.jpeg);
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../assets/img/sala-esperaC.jpeg);
     background-size: cover;
     background-position: center;
 }
 
 #publicidad {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     background-color: rgba(60, 60, 60, 0.8);
     overflow: hidden;
     position: relative;
@@ -372,7 +399,7 @@ a:hover {
 }
 
 #publicidad .btn-get-started:hover {
-    background: #65c9cd;
+    background: #e95420a1;
 }
 
 @media (max-width: 992px) {
@@ -401,4 +428,345 @@ a:hover {
     #publicidad {
         height: 160vh;
     }
+}
+
+
+/* ==== Seccion general ==== */
+
+section {
+    padding: 60px 0;
+    overflow: hidden;
+}
+
+.section-bg {
+    background-color: #f7fcfc;
+}
+
+.section-title {
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+.section-title h2 {
+    font-size: 32px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    position: relative;
+}
+
+.section-title h2::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 50px;
+    height: 3px;
+    background: #E95420;
+    bottom: 0;
+    left: calc(50% - 25px);
+}
+
+.section-title p {
+    margin-bottom: 0;
+}
+
+
+/* ==== Servicios ==== */
+
+.services .icon-box {
+    padding: 30px;
+    position: relative;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0 0 29px 0 rgba(68, 88, 144, 0.12);
+    /* transition: all 0.3s ease-in-out; */
+    border-radius: 8px;
+    z-index: 1;
+}
+
+.services .icon-box::before {
+    content: '';
+    position: absolute;
+    background: #d9f1f2;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    top: 100%;
+    transition: all 0.3s;
+    z-index: -1;
+}
+
+.services .icon-box:hover::before {
+    background: #E95420;
+    top: 0;
+    border-radius: 0px;
+}
+
+.services .icon {
+    margin-bottom: 15px;
+}
+
+.services .icon fa-icon {
+    font-size: 48px;
+    line-height: 1;
+    color: #E95420;
+    transition: all 0.3s ease-in-out;
+}
+
+.services .title {
+    font-weight: 700;
+    margin-bottom: 15px;
+    font-size: 18px;
+}
+
+.services .title a {
+    color: #111;
+}
+
+.services .description {
+    font-size: 15px;
+    line-height: 28px;
+    margin-bottom: 0;
+}
+
+.services .icon-box:hover .title a,
+.services .icon-box:hover .description {
+    color: #fff;
+}
+
+.services .icon-box:hover .icon fa-icon {
+    color: #fff;
+}
+
+
+/* ==== Urgencia ==== */
+
+.urgencia {
+    background: #E95420;
+    color: #fff;
+    background-size: cover;
+    padding: 60px 0;
+}
+
+.urgencia h3 {
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.urgencia .urgencia-btn {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 10px 35px;
+    border-radius: 25px;
+    transition: 0.5s;
+    margin-top: 10px;
+    border: 2px solid #fff;
+    color: #fff;
+}
+
+.urgencia .urgencia-btn:hover {
+    background: #fff;
+    color: #E95420;
+}
+
+
+/* ==== Acerca ==== */
+
+.acerca .content h3 {
+    font-weight: 600;
+    font-size: 26px;
+}
+
+.acerca .content ul {
+    list-style: none;
+    padding: 0;
+}
+
+.acerca .content ul li {
+    padding-bottom: 10px;
+}
+
+.acerca .content ul i {
+    font-size: 20px;
+    padding-right: 4px;
+    color: #E95420;
+}
+
+.acerca .content p:last-child {
+    margin-bottom: 0;
+}
+
+
+/* ==== Todos los servicios ==== */
+
+.all-services .icon-box {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.all-services .icon {
+    display: flex;
+    justify-content: center;
+}
+
+.all-services .icon i {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 20px;
+    background: #fff;
+    border-radius: 50%;
+    transition: 0.5s;
+    color: #E95420;
+    font-size: 40px;
+    overflow: hidden;
+    padding-top: 20px;
+    box-shadow: 0px 0 25px rgba(0, 0, 0, 0.15);
+}
+
+.all-services .icon-box:hover .icon i {
+    box-shadow: 0px 0 25px rgba(255, 153, 0, 0.486);
+}
+
+.all-services .title {
+    font-weight: 600;
+    margin-bottom: 15px;
+    font-size: 18px;
+    position: relative;
+    padding-bottom: 15px;
+}
+
+.all-services .title a {
+    color: #444444;
+    transition: 0.3s;
+}
+
+.all-services .title a:hover {
+    color: #E95420;
+}
+
+.all-services .title::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 50px;
+    height: 2px;
+    background: #E95420;
+    bottom: 0;
+    left: calc(50% - 25px);
+}
+
+.all-services .description {
+    line-height: 24px;
+    font-size: 14px;
+}
+
+
+/* ===== Footer ===== */
+
+#footer {
+    background: #eeeeee;
+    /* padding: 0 0 30px 0; */
+    color: #555555;
+    font-size: 14px;
+}
+
+#footer .footer-top {
+    background: #222831;
+    padding: 20px 0 2px 0;
+    color: white;
+}
+
+#footer .footer-top .footer-info {
+    margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-info h3 {
+    font-size: 24px;
+    margin: 0 0 20px 0;
+    padding: 2px 0 2px 0;
+    line-height: 1;
+    font-weight: 700;
+}
+
+#footer .footer-top .footer-info p {
+    font-size: 14px;
+    line-height: 24px;
+    margin-bottom: 0;
+    font-family: "Roboto", sans-serif;
+}
+
+#footer .footer-top .social-links a {
+    font-size: 18px;
+    display: inline-block;
+    line-height: 1;
+    padding: 8px 0;
+    margin-right: 4px;
+    border-radius: 4px;
+    text-align: center;
+    width: 36px;
+    height: 36px;
+    transition: 0.3s;
+}
+
+#footer .footer-top .social-links fa-icon:hover {
+    color: #E95420;
+}
+
+#footer .footer-top h4 {
+    font-size: 16px;
+    font-weight: 600;
+    position: relative;
+    padding-bottom: 12px;
+}
+
+#footer .footer-top h4 {
+    font-size: 16px;
+    font-weight: 600;
+    position: relative;
+    padding-bottom: 12px;
+}
+
+#footer .footer-top .footer-links {
+    margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-links ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#footer .footer-top .social-links fa-icon {
+    padding-right: 2px;
+    color: white;
+    line-height: 1;
+}
+
+#footer .footer-top .footer-links ul a {
+    font-size: 14px;
+}
+
+#footer .footer-top .footer-links ul li {
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+}
+
+#footer .footer-top .footer-links ul li:first-child {
+    padding-top: 0;
+}
+
+#footer .footer-top .footer-links ul a {
+    color: white;
+    transition: 0.3s;
+    display: inline-block;
+    line-height: 1;
+}
+
+#footer .footer-top .footer-links ul a:hover {
+    color: #E95420;
 }
