Seccion servicios e iconos

--- a/src/app/empleados/login.component.html
+++ b/src/app/empleados/login.component.html
@@ -26,7 +26,7 @@
                             </form>
 
                             <div class="text-center">
-                                <a class="small" href="/home">Volver a la pagina principal</a>
+                                <a class="small" [routerLink]="['/home']">Volver a la pagina principal</a>
                             </div>
                             <!--<div class="container alert alert-danger pl-4" *ngIf="errores?.length > 0">
                             <span>{{errores}}</span>
