--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,6 +18,9 @@
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link " [routerLink]="[ '/pacientes']" *ngIf="authService.isAuthenticated()">Pacientes</a>
             </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link " [routerLink]="[ '/citas']" *ngIf="authService.isAuthenticated()">Citas</a>
+            </li>
         </ul>
 
         <ul class="navbar-nav navbar-right pr-5 ">
