--- a/src/app/citas/citas.component.html
+++ b/src/app/citas/citas.component.html
@@ -1,6 +1,9 @@
 <div class="container card border-secondary my-3">
     <div class="card-header">Lista de citas</div>
     <div class="card-body text-dark table-responsive">
+        <div class="my-2 d-flex justify-content-between p-2 form-inline">
+            <button type="button" class="btn btn-info" [routerLink]="['/citas/cita-form']">Agendar cita</button>
+        </div>
         <table class="table table-sm table-striped table-hover text-center">
             <thead>
                 <tr>
@@ -31,16 +34,16 @@
                     <td>{{cita.servicio.servicio}}</td>
                     <td>$ {{cita.costo | number:'1.0-0'}}</td>
                     <td>
-                        <button type="button" class="btn btn-success btn-sm" *ngIf="cita.saldo==1">
+                        <button type="button" class="btn btn-outline-success btn-sm" *ngIf="cita.saldo==true">
                             Si <fa-icon [icon]="faCheck"></fa-icon>
                         </button>
-                        <button type="button" class="btn btn-warning btn-sm" *ngIf="cita.saldo==0">
+                        <button type="button" class="btn btn-outline-warning btn-sm" *ngIf="cita.saldo==false">
                             No <fa-icon [icon]="faExclamationTriangle"></fa-icon>
                         </button>
                     </td>
                     <td>
-                        <button type="button" name="editar" class="btn btn-info btn-sm mr-2">Editar</button>
-                        <button type="button" name="eliminar" class="btn btn-danger btn-sm">Eliminar</button>
+                        <button type="button" name="editar" class="btn btn-outline-info btn-sm mr-2" [routerLink]="['/citas/cita-form', cita.idCita]">Editar</button>
+                        <button type="button" name="eliminar" class="btn btn-outline-danger btn-sm" (click)='delete(cita)'>Eliminar</button>
                     </td>
                 </tr>
             </tbody>
